<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              style="@style/root_view.linear"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <!--title-->
    <TextView
        android:layout_height="?android:listPreferredItemHeight"
        android:layout_width="match_parent"
        android:gravity="left|center_vertical"
        android:textColor="@color/brand_green"
        android:textSize="@dimen/font_size_dialog_title"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        android:text="@string/dialog_reset_game_title"/>

    <!-- divider between title and content-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="2px"
        android:layout_marginBottom="8dp"
        android:background="@color/brand_green"/>


    <TextView
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:gravity="left|center_vertical"
        android:textSize="@dimen/font_size_default"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/dialog_reset_game_confirm_text"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:orientation="horizontal">

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:gravity="left|center_vertical"
            android:textSize="@dimen/font_size_default"
            android:layout_marginRight="8dp"
            android:layout_marginLeft="16dp"
            android:text="@string/dialog_reset_game_content_text"/>

        <!--clickable field for reset-to value-->
        <TextView
            android:id="@+id/reset_to_value"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="center|center_vertical"
            android:textColor="@color/brand_green"
            android:textSize="@dimen/font_size_dialog_title"
            android:layout_marginRight="16dp"
            android:text="0"/>


    </LinearLayout>


</LinearLayout>